src/components/sections/FirstLiveSimulator/style.module.scss
@import '~assets/styles/media.scss';
@import '~assets/styles/mixins.scss';

.wrapper {
  display: flex;
  flex-direction: column;
  //margin-top: 100px;
  z-index: 5;
  @media screen and (max-width: $desktop){
    margin-top: 200px;
  }

  @media screen and (max-width: $tablet){
    margin-top: 120px;
  }
}

.flsContainer {
  display: flex;
  position: relative;
  flex-direction: column;
  flex-wrap: wrap;
  padding: 0 20px;

  @media screen and (min-width: 1313px){
    padding: 0 125px 0 130px;
  }
  @media screen and (min-width: $desktop){
    display: none;
  }

  margin-top: 100px;
}

.videoWrapper {

  @media screen and (max-width: $desktop){
    order: 1;
  }
}

.morphVideo {
  width: 100%;
  z-index: 5;
  margin-top: 140px;

  @media screen and (max-width: $desktop){
    margin: 0;
  }
}

.title {
  margin-left: 40px !important;
  width: 85%;
  font-size: 61px;
  line-height: 107%;
  margin-left: 12px;
}

.paragraph {
  font-size: 16px;
  color: #c1c0c0;
  margin: 35px 0 0 43px;
  width: 80%;

  @media screen and (max-width: $desktop) {
    margin: 25px 0 0 0;
    width: 100%;
  }
}


.content {
  display: grid;
  grid-template-columns: 50% 50%;
  margin-top: 160px;

  @media screen and (max-width: $desktop) {
    display: flex;
    flex-direction: column;
    margin-top: 0;
  }
}

.descr {
  position: relative;
}

.grayLine {
  position: relative;
  background: linear-gradient(90deg, #FBBF9A -4.09%, #FFE876 9.96%, #12F9F8 28.24%, #9CFD82 55.1%, #FCF16E 78.52%, #FED292 105.6%), #B7F201;
  -webkit-background-clip: text;
  background-clip: text;
  color: transparent;
}

.grayLine img {
  position: absolute;
  left: 10px;
  top: 15%;
}

// smile with text
.respect {
  display: flex;
  right: 0;
  flex-direction: column;
  align-items: flex-end;
  position: absolute;
  bottom: -93px;

  @media screen and (max-width: $desktop) {
    display: none;
  }
}

.privacyText {
  position: relative;
  font-size: 20px;
  line-height: 26px;
  text-align: center;
  left: -14px;
  transform: rotate(-19deg);
  letter-spacing: 0.05em;
  color: #ffffff;
}

.smile {
  position: relative;
  right: 18%;
}


@media screen and (max-width: $m-desktop) {
  .grayLine img {
    width: 40vw;
  }

  .privacyText {
    font-size: 1.2vw;
  }

  .smile {
    width: 5.2vw;
  }
}

@media screen and (max-width: $desktop) {
  .flsDesktopContainer {
    padding: 0 20px;
  }

  .title {
    line-height: 120%;
    letter-spacing: 0.03em;
    width: auto;
    font-size: 36px;
  }

  .grayLine img {
    left: 0;
    width: 100%;
  }

  .paragraph {
    @include prtnlSclScrnSize(font-size, 23);
  }
}

@media screen and (max-width: $tablet) {
  .title {
    margin-left: 28px !important;
  }

  .paragraph {
    font-size: 14px;
  }

  .respect {
    position: relative;
    align-items: center;
    justify-content: flex-start;
    flex-direction: row;
    bottom: 0;
    margin-left: 30px;
    @include prtnlSclScrnSize(margin-top, 30);
  }

  .privacyText {
    @include prtnlSclScrnSize(font-size, 30);
    transform: rotate(0);
    margin-left: 14px;
  }

  .smile {
    @include prtnlSclScrnSize(max-width, 130);
    right: 0;
  }
  .grayLine img {
    top: 7%;
  }
}

.slider {
  margin-top: 60px;
  margin-bottom: 25px;
}

